--- a/book-management-appVue/package.json
+++ b/book-management-appVue/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "lodash": "^4.17.21",
     "sass": "^1.86.0",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
