--- a/book-management-appVue/package.json
+++ b/book-management-appVue/package.json
@@ -11,6 +11,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "@vueup/vue-quill": "^1.2.0",
     "axios": "^1.8.4",
     "lodash": "^4.17.21",
     "sass": "^1.86.0",
