--- a/book-management-appVue/package.json
+++ b/book-management-appVue/package.json
@@ -19,6 +19,7 @@
     "sass": "^1.86.0",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
+    "vue-infinite-scroll": "^2.0.2",
     "vue-router": "^4.5.0",
     "vuex": "^4.1.0"
   },
