--- a/book-management-appVue/.gitignore
+++ b/book-management-appVue/.gitignore
@@ -14,6 +14,13 @@ dist-ssr
 coverage
 *.local
 
+
+.env
+.env.local
+.env.*.local
+.env.development
+.env.production
+
 /cypress/videos/
 /cypress/screenshots/
 
